package logic2world_protocols;

enum e_server_msg_type {
    e_mst_lwstart_index = 20000;
	e_mst_l2w_game_ready = 20001;//注册游戏

	e_mst_w2l_player_login = 20002;//玩家登陆
	e_mst_w2l_player_logout = 20003;//玩家退出
	e_mst_w2l_change_player_property = 20004; // 玩家属性变化
	e_mst_l2w_player_login_result = 20005;//进入游戏返回
	e_mst_l2w_player_logout_result = 20006;//退出游戏返回

	e_mst_l2w_game_broadcast = 20011;			//游戏消息广播

	e_mst_l2w_robot_request = 20012;			//请求机器人
	e_mst_l2w_player_quest_change = 20013;		//玩家任务成就改变

	e_mst_b2w_robot_request = 20016;			//请求新的机器人
	e_mst_b2l_player_login = 20017;				//机器人登陆
	e_mst_l2w_share_notify = 20018;				//分享通知
	e_mst_w2l_deduct_stock = 20019;				//扣除库存
	e_mst_l2w_bind_inviter = 20020;				//绑定邀请人

	e_mst_l2w_player_activity_change = 20021;	//玩家活动数据变化
	e_mst_l2w_player_mail = 20022;				//游戏发邮件

	e_msg_l2w_reflush_room = 20023;			//刷新房间
	e_msg_w2l_set_room = 20024;				//通知游戏服务器添加房间
	e_msg_w2l_room_open = 20025;			//通知关闭,打开房间

	e_mst_lwend_index = 30000;
  }